--- a/HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/CSS/Estilos iframes.css
+++ b/HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/CSS/Estilos iframes.css
@@ -2,6 +2,18 @@
     color: #f72585;
     text-align: center;
 }
+.irelementos{
+    text-decoration:none;
+    padding: 15px 25px;
+    margin: 15px;
+    color: #9619b5;
+    border: 2px solid #9619b5;
+    text-align: center;
+}
+.irelementos:hover{
+    color: #cc00ff;
+    border-color: #cc00ff;
+}
 .marco{
     width: 100%;
     height: 600px;
