--- a/HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/CSS/Estilos iframes.css
+++ b/HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/CSS/Estilos iframes.css
@@ -5,9 +5,9 @@
 .irelementos{
     text-decoration:none;
     padding: 15px 25px;
-    margin: 15px;
+    margin: 15px 15px;
     color: #9619b5;
-    border: 2px solid #9619b5;
+    border: 5px solid #9619b5;
     text-align: center;
 }
 .irelementos:hover{
