--- a/HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/CSS/Estilos Elementos.css
+++ b/HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/CSS/Estilos Elementos.css
@@ -10,6 +10,7 @@
     color: #9619b5;
     border: 5px solid #9619b5;
     text-align: center;
+    display: inline-block;
 }
 .iframesbutton:hover{
     color: #cc00ff;
