--- a/HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/CSS/Estilos iframes.css
+++ b/HTML + CSS/Leccion06 HTML + CSS Elementos Inline y Block/CSS/Estilos iframes.css
@@ -17,11 +17,11 @@
 }
 .marco{
     width: 100%;
-    height: 600px;
+    height: 300px;
     border: 1px solid #f72585;
 }
 .centrar{
-    text-align: center;
+    text-align:center;
 }
 .boton{
     background-color: white;
@@ -29,9 +29,10 @@
     text-decoration: none;
     display: inline-block;
     padding: 10px;
+    margin-top: 10px;
 }
 .boton:hover{
-    background-color: #457b9d;
+    background-color: #8acdf7;
     color:#f72585;
     border-color: #f72585;
 }
