--- a/CSS/IndexStyles.css
+++ b/CSS/IndexStyles.css
@@ -12,9 +12,26 @@
     padding: 5px;
     margin: 5px;
     font-size: 20px;
+    border-radius: 10px 0 10px 0;
 }
 .Leccionlink:hover{
         background-color: #8acdf7;
         color:#f72585;
         border-color: #f72585;
     }
+h1{
+    padding: 10px;
+    margin: 10px;
+}
+footer{
+    clear: both;
+    padding: 10%;
+    text-align: center;
+}
+footer a{
+    text-decoration: none;
+    border: 2px solid black;
+    padding: 5px;
+    color:deeppink;
+    border-color: darkviolet;
+}
