--- a/CursoHTML/Leccion03 HTML + CSS Links/CSS/Estilos Botones.css
+++ b/CursoHTML/Leccion03 HTML + CSS Links/CSS/Estilos Botones.css
@@ -12,3 +12,33 @@ a:hover, a:visited, a:active{
     background-color: deeppink;
     color:white;
 }
+header {
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    padding: 5px;
+    display: flex;
+    width: 100%;
+}
+.nav-buttons .btn {
+    padding: 5px 10px;
+    background-color: #007bff;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: background-color 0.3s, color 0.3s;
+}
+.nav-buttons .btn:hover {
+    background-color: white;
+    color: #007BFF;
+}
+.center {
+    margin-left: auto;
+    margin-right: auto;
+}
+.nav-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
