--- a/CursoHTML/Leccion06 HTML + CSS Elementos Inline y Block/CSS/Estilos Elementos.css
+++ b/CursoHTML/Leccion06 HTML + CSS Elementos Inline y Block/CSS/Estilos Elementos.css
@@ -48,3 +48,33 @@ p{
     padding: 10px;
     margin: 10px 0px 0px 10px;
 }
+header {
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    padding: 5px;
+    display: flex;
+    width: 100%;
+}
+.btn {
+    padding: 5px 10px;
+    background-color: #007bff;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: background-color 0.3s, color 0.3s;
+}
+.btn:hover {
+    background-color: white;
+    color: #007BFF;
+}
+.center {
+    margin-left: auto;
+    margin-right: auto;
+}
+.nav-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
