--- a/CursoHTML/Leccion07.2 HTML + CSS Login/CSS/LoginStyle.css
+++ b/CursoHTML/Leccion07.2 HTML + CSS Login/CSS/LoginStyle.css
@@ -1,8 +1,6 @@
 html{
     height: 100%;
-}
-*{
-    widht: 100%;
+    width: 100%;
 }
 body{
     margin: 0;
@@ -43,4 +41,34 @@ body{
     cursor: pointer;
     padding: 15px;
     margin-top: 30px;
+}
+header {
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    padding: 5px;
+    display: flex;
+    width: 100%;
+}
+.btn {
+    padding: 5px 10px;
+    background-color: #007bff;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: background-color 0.3s, color 0.3s;
+}
+.btn:hover {
+    background-color: white;
+    color: #007BFF;
+}
+.center {
+    margin-left: auto;
+    margin-right: auto;
+}
+.nav-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
