--- a/CursoHTML/Leccion08 HTML + CSS Elementos semanticos/CSS/Styles.css
+++ b/CursoHTML/Leccion08 HTML + CSS Elementos semanticos/CSS/Styles.css
@@ -1,8 +1,3 @@
-header{
-    color: #f72585;
-    text-align: center;
-    font-size: 20px;
-}
 nav{
     width: 20%;
     float: left;
@@ -45,4 +40,34 @@ footer a{
     clear: both;
     padding: 10%;
     text-align: center;
+}
+header {
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    padding: 5px;
+    display: flex;
+    width: 100%;
+}
+.btn {
+    padding: 5px 10px;
+    background-color: #007bff;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: background-color 0.3s, color 0.3s;
+}
+.btn:hover {
+    background-color: white;
+    color: #007BFF;
+}
+.center {
+    margin-left: auto;
+    margin-right: auto;
+}
+.nav-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
