--- a/CursoCSS/Leccion02_CSS/CSS/Styles.css
+++ b/CursoCSS/Leccion02_CSS/CSS/Styles.css
@@ -1,3 +1,27 @@
+h1{
+    text-align: center;
+}
+.rojo{
+    background-color: firebrick;
+}
+.rosa{
+    background-color: hotpink;
+}
+.amarillo{
+    background-color: gold;
+}
+.violeta{
+    background-color: blueviolet;
+}
+.verde{
+    background-color: lime;
+}
+.azul{
+    background-color: turquoise;
+}
+.rojo, .rosa, .violeta{
+    color: white;
+}
 header {
     justify-content: space-between;
     align-items: center;
@@ -20,10 +44,14 @@ header {
     color: #007BFF;
 }
 .center {
-    float: left;
+    margin-left: auto;
+    margin-right: auto;
 }
 .nav-buttons {
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
+
+
+
