--- a/CSS/IndexStyles.css
+++ b/CSS/IndexStyles.css
@@ -55,9 +55,11 @@ legend{
 }
 #ListaCursoHTML{
     float: left;
-    margin-left: 200px;
+    margin-left: 150px;
+    width: 500px;
 }
 #ListaCursoCSS{
     float: right;
-    margin-right: 200px;
+    margin-right: 150px;
+    width: 500px;
 }
