--- a/CursoCSS/Leccion01_CSS/CSS/Styles.css
+++ b/CursoCSS/Leccion01_CSS/CSS/Styles.css
@@ -25,7 +25,6 @@ header {
     justify-content: space-between;
     align-items: center;
     color: white;
-    padding: 5px;
     display: flex;
 }
 .nav-buttons {
@@ -35,6 +34,7 @@ header {
 }
 .btn {
     padding: 5px 10px;
+    margin: 10px;
     background-color: #007bff;
     color: white;
     text-decoration: none;
