--- a/CursoCSS/Leccion07_FormatoTexto/CSS/Styles.css
+++ b/CursoCSS/Leccion07_FormatoTexto/CSS/Styles.css
@@ -2,7 +2,6 @@ header {
     justify-content: space-between;
     align-items: center;
     color: white;
-    padding: 5px;
     display: flex;
     width: 100%;
 }
@@ -31,4 +30,27 @@ header {
 h1{
     margin: 40px auto 40px;
     text-align: center;
+    color: rgb(149, 27, 165);
+    text-transform: uppercase;
+    text-shadow: 2px 2px 2px rgb(255, 86, 255);
+    letter-spacing: 3px;
+    word-spacing: 3px;
+    text-decoration: underline overline;
+    text-underline-offset: 7px;
+}
+.caja{
+    padding: 15px;
+    margin: auto;
+    width: 60%;
+    background-color: rgb(19, 138, 194);
+    border-radius: 5px;
+    color: white;
+}
+.texto{
+    text-align: justify;
+    /* direction: rtl; Para invertir la dirección del texto*/ 
+    text-decoration: none;
+    text-indent: 30px;
+    line-height: 1.5;
+    text-shadow: 1px 1px 2px rgb(221, 221, 221);
 }
