--- a/CursoCSS/Leccion08_FuentesCSS/CSS/Styles.css
+++ b/CursoCSS/Leccion08_FuentesCSS/CSS/Styles.css
@@ -1,19 +1,3 @@
-h1{
-    color:blue;
-    text-align: center;
-}
-p{
-    color:white;
-    background-color: #a93226;
-    padding: 15px;
-    border: 10px solid powderblue;
-    /*margin-top: 40px;
-    margin-right: 10px;
-    margin-bottom: 20px;
-    margin-left: 10px;*/
-    margin: 40 10 20 10;    /* -- ESTE SIMPLIFICA TOP, RIGHT, BOTTOM Y LEFT*/
-    text-align: center;
-}
 header {
     justify-content: space-between;
     align-items: center;
@@ -42,4 +26,15 @@ header {
     width: 100%;
     display: flex;
     justify-content: space-between;
+}
+h1{
+    margin: 40px auto 40px;
+    text-align: center;
+    color: rgb(149, 27, 165);
+    text-transform: uppercase;
+    text-shadow: 2px 2px 2px rgb(255, 86, 255);
+    letter-spacing: 3px;
+    word-spacing: 3px;
+    text-decoration: underline overline;
+    text-underline-offset: 7px;
 }
