--- a/CursoHTML/Leccion07.2 HTML + CSS Login/CSS/LoginStyle.css
+++ b/CursoHTML/Leccion07.2 HTML + CSS Login/CSS/LoginStyle.css
@@ -46,12 +46,12 @@ header {
     justify-content: space-between;
     align-items: center;
     color: white;
-    padding: 5px;
     display: flex;
     width: 100%;
 }
 .btn {
     padding: 5px 10px;
+    margin: 10px;
     background-color: #007bff;
     color: white;
     text-decoration: none;
