--- a/CSS/IndexStyles.css
+++ b/CSS/IndexStyles.css
@@ -67,7 +67,7 @@ legend{
 }
 fieldset{
     padding: 10px 5px;
-    border: 2px double;
-    border-radius: 5px;
+    border: double;
+    border-radius: 15px;
     height: 300px;
 }
