--- a/CSS/IndexStyles.css
+++ b/CSS/IndexStyles.css
@@ -69,5 +69,8 @@ fieldset{
     padding: 10px 5px;
     border: double;
     border-radius: 15px;
-    height: 300px;
+    height: 320px;
+    box-sizing: border-box;
+    margin: auto;
+    width: 500px;
 }
