--- a/CSS/IndexStyles.css
+++ b/CSS/IndexStyles.css
@@ -61,9 +61,9 @@ legend{
 fieldset{
     border: double;
     border-radius: 15px;
-    text-align: center;
-    height: 320px;
+    text-align: center; 
     box-sizing: border-box;
     width: 40%;
+    min-height: 320px;
 }
 
