--- a/CursoCSS/Leccion08_FuentesCSS/CSS/Styles.css
+++ b/CursoCSS/Leccion08_FuentesCSS/CSS/Styles.css
@@ -22,6 +22,9 @@ header {
 .center {
     margin-left: auto;
     margin-right: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .nav-buttons {
     width: 100%;
