--- a/CursoCSS/Leccion11_Posicionamiento_ElementosCSS/CSS/Styles.css
+++ b/CursoCSS/Leccion11_Posicionamiento_ElementosCSS/CSS/Styles.css
@@ -4,6 +4,9 @@ header {
     color: white;
     display: flex;
     width: 100%;
+    position: sticky;
+    top: 10px;
+    z-index: 5;
 }
 .btn {
     padding: 5px 10px;
@@ -105,4 +108,23 @@ div.absoluto_zindex{
     background-color: azure;
     padding: 50px;
     z-index: 1;
+}
+div.contenedor{
+    position: relative;
+    border: 3px dashed greenyellow;
+    width: 30%;
+    margin: auto;
+    padding: 20px;
+}
+.imagen{
+    width: 100%;
+    opacity: .2;
+}
+div.centro{
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+    font-size: 25px;
+    font-weight: bold;
 }
