--- a/CursoCSS/Leccion16_Pseudo_Elementos/CSS/Styles.css
+++ b/CursoCSS/Leccion16_Pseudo_Elementos/CSS/Styles.css
@@ -42,22 +42,32 @@ h1{
     text-underline-offset: 7px;
 }
 div.contenedor{
-    width: 80%;
+    width: 30%;
     height: 20%;
     margin: auto;
     border: 3px solid #a8dadc;
     padding: 15px;
     color: #457b9d;
+    text-align: center;
 }
-div.contenedor.descendiente p{
-    background-color: #fdffb6;
+div.contenedor p::selection{
+    background-color: #ffb703;
+    color: red;
 }
-div.contenedor.hijo > p{
-    background-color: #ffadad;
+div.contenedor p::first-line{
+    font-variant: small-caps;
+    color: #e76f51;
 }
-div.contenedor.adyacente + p{
-    background-color: #caffbf;
+div.contenedor p::first-letter{
+    font-size: 200%;
+    color: red;
+    font-weight: bold;
 }
-div.contenedor.hermano ~ p{
-    background-color: #caffbf;
+div.contenedor p::before{
+    content: "- ";
+}
+div.contenedor p::after{
+    content: " -";
+    color: red;
+    /* content: "url(para insertar aquí una imagen u otra cosa);*/
 }
