--- a/CursoCSS/Leccion17_Transparencia_CSS/CSS/Styles.css
+++ b/CursoCSS/Leccion17_Transparencia_CSS/CSS/Styles.css
@@ -42,22 +42,20 @@ h1{
     text-underline-offset: 7px;
 }
 div.contenedor{
-    width: 80%;
+    width: 30%;
     height: 20%;
     margin: auto;
     border: 3px solid #a8dadc;
     padding: 15px;
     color: #457b9d;
+    text-align: center;
 }
-div.contenedor.descendiente p{
-    background-color: #fdffb6;
+img{
+    width: 100%;
+    height: auto;
+    opacity: 0.5;
+    transition: opacity 0.5s;
 }
-div.contenedor.hijo > p{
-    background-color: #ffadad;
-}
-div.contenedor.adyacente + p{
-    background-color: #caffbf;
-}
-div.contenedor.hermano ~ p{
-    background-color: #caffbf;
+img:hover{
+    opacity: 1;
 }
