--- a/CursoCSS/Leccion20_Flexbox_CSS/CSS/Styles.css
+++ b/CursoCSS/Leccion20_Flexbox_CSS/CSS/Styles.css
@@ -41,3 +41,26 @@ h1{
     text-decoration: underline overline;
     text-underline-offset: 7px;
 }
+div.contenedor{
+    margin: 100px;
+    display: flex;
+    justify-content: space-around;
+    /* flex-direction: column-reverse;  para hacerlo vertical */
+    /* flex-direction: row;  "DEFAULT", se puede revertir con row-reverse */
+    flex-flow: row wrap;
+    height: 300px;
+    align-items: center;
+    align-content: center;
+    background-color: rgb(94, 0, 80);
+    padding: 20px;
+    border-radius: 10px;
+}
+div.contenedor > p{
+    background-color: rgb(255, 86, 255);
+    color: rgb(94, 0, 80);
+    padding: 15px;
+    border-radius: 5px;
+    font-size: 1.5em;
+    font-weight: bold;
+    box-shadow: 2px 2px 5px black;
+}
